--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Zapraszamy do labiryntu w polu kukurydzy. Podejmij wyzwanie i przeżyj niezapomnianą przygodę. Doświadcz uroku labiryntu kukurydzy, zaplanuj swoją wizytę już dziś i stwórz wspomeniania na całe życie w naszym labiryncie kukurydzy. Do zobaczenia w Młynowie!">
+    <meta name="keywords" content="Labirynt w kukurydzy Młynów, Labirynt kukurydziany Młynów, Atrakcje Młynów labirynt w kukurydzy, Zwiedzanie labiryntu w kukurydzy Młynów, Zwiedzanie labiryntu w kukurydzy Młynów, Rozrywka w labiryncie kukurydzianym Młynów, Rozrywka w labiryncie kukurydzianym Młynów, Rozrywka w labiryncie kukurydzianym Młynów, Rozrywka w labiryncie kukurydzianym Młynów, atrakcje Ostrów wielkopolski">
+    <meta name="author" content="Łukasz Włosik">
     <title>Labirynt w Polu Kukurydzy Młynów</title>
     <link rel="icon" href="img/flav.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,13 +23,13 @@
     <div class="wrapper">
       <header class="header shadow flex" id="open-header">
         <section class="header-logo">
-          <a href="index.html">
+          
           <img
             src="img/logo.png"
             alt="Logo labiryntu kukurydzy - atrakcja dla całej rodziny, znajdź drogę przez nasze pola labiryntu"
             id="header-logo"
           />
-        </a>
+        
         </section>
         <section class="header-menu">
           <button class="btn-mobile-header open-mobile-menu">
@@ -75,7 +78,7 @@
         <section class="nav-right-side">
           <ul class="flex nav-ul-gap">
             <a
-              href="https://drive.google.com/file/d/1l1TNBnAdTt2cYVz7dSELEG1khclL0isd/view"
+              href="https://drive.google.com/file/d/11MSj78uMLQAui6DDD7TMIhrsrLM96ek2/view?usp=sharing"
               target="_blank"
               ><li>Regulamin</li></a
             >
@@ -185,7 +188,7 @@
             </div>
             <h4>Odnajdź prawidłową drogę w labiryncie</h4>
             <p>
-              Witaj w naszym labiryncie w kukurydzy stworzonym na dwuhektarowym polu! Przed Tobą niezapomniana
+              Witaj w naszym labiryncie w kukurydzy stworzonym na jednohektarowym polu! Przed Tobą niezapomniana
               przygoda, twoim zadaniem będzie znalezienie właściwej drogi
               przez ścieżki naszego kukurydzianego labiryntu. 
             </p>
