--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="#o-nas" class="header-option"><li>O nas</li></a>
             <a href="#cennik" class="header-option"><li>Cennik</li></a>
             <a href="#kontakt" class="header-option"><li>Kontakt</li></a>
-            <a href="https://drive.google.com/file/d/1l1TNBnAdTt2cYVz7dSELEG1khclL0isd/view" target="_blank" class="header-option"><li>Regulamin</li></a>
+            <a href="https://drive.google.com/file/d/11MSj78uMLQAui6DDD7TMIhrsrLM96ek2/view?usp=sharing" target="_blank" class="header-option"><li>Regulamin</li></a>
             
           </ul>
         </section>
